--- a/app/src/main/res/layout/activity_mensaje.xml
+++ b/app/src/main/res/layout/activity_mensaje.xml
@@ -10,11 +10,13 @@
         android:id="@+id/mensaje"
         android:layout_width="186dp"
         android:layout_height="38dp"
-        android:text="TextView"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.56"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.135" />
 
     <Button
         android:id="@+id/enviar"
@@ -25,8 +27,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mensaje"
-        app:layout_constraintVertical_bias="0.151" />
+        app:layout_constraintVertical_bias="0.431" />
 
+    <TextView
+        android:id="@+id/respuesta"
+        android:layout_width="186dp"
+        android:layout_height="38dp"
+        android:text=""
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.447" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
